@@ -1,5 +1,5 @@
 /**
- * Copyright © 2016-2020 The Thingsboard Authors
+ * Copyright © 2016-2024 The Thingsboard Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,28 +15,37 @@
  */
 package org.thingsboard.server.queue.discovery;
 
+import jakarta.annotation.PostConstruct;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.context.ApplicationContext;
 import org.springframework.stereotype.Component;
-import org.springframework.util.StringUtils;
-import org.thingsboard.server.common.data.id.TenantId;
+import org.thingsboard.server.common.data.StringUtils;
+import org.thingsboard.server.common.data.TbTransportService;
+import org.thingsboard.server.common.data.util.CollectionsUtil;
 import org.thingsboard.server.common.msg.queue.ServiceType;
 import org.thingsboard.server.gen.transport.TransportProtos;
 import org.thingsboard.server.gen.transport.TransportProtos.ServiceInfo;
-import org.thingsboard.server.queue.settings.TbQueueRuleEngineSettings;
-import org.thingsboard.server.queue.settings.TbRuleEngineQueueConfiguration;
+import org.thingsboard.server.queue.util.AfterContextReady;
 
-import javax.annotation.PostConstruct;
 import java.net.InetAddress;
 import java.net.UnknownHostException;
-import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
+import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
+
+import static org.thingsboard.common.util.SystemUtil.getCpuCount;
+import static org.thingsboard.common.util.SystemUtil.getCpuUsage;
+import static org.thingsboard.common.util.SystemUtil.getDiscSpaceUsage;
+import static org.thingsboard.common.util.SystemUtil.getMemoryUsage;
+import static org.thingsboard.common.util.SystemUtil.getTotalDiscSpace;
+import static org.thingsboard.common.util.SystemUtil.getTotalMemory;
+
 
 @Component
 @Slf4j
@@ -51,15 +60,14 @@ public class DefaultTbServiceInfoProvider implements TbServiceInfoProvider {
     private String serviceType;
 
     @Getter
-    @Value("${service.tenant_id:}")
-    private String tenantIdStr;
+    @Value("${service.rule_engine.assigned_tenant_profiles:}")
+    private Set<UUID> assignedTenantProfiles;
 
-    @Autowired(required = false)
-    private TbQueueRuleEngineSettings ruleEngineSettings;
+    @Autowired
+    private ApplicationContext applicationContext;
 
     private List<ServiceType> serviceTypes;
     private ServiceInfo serviceInfo;
-    private TenantId isolatedTenant;
 
     @PostConstruct
     public void init() {
@@ -67,39 +75,33 @@ public class DefaultTbServiceInfoProvider implements TbServiceInfoProvider {
             try {
                 serviceId = InetAddress.getLocalHost().getHostName();
             } catch (UnknownHostException e) {
-                serviceId = org.apache.commons.lang3.RandomStringUtils.randomAlphabetic(10);
+                serviceId = StringUtils.randomAlphabetic(10);
             }
         }
         log.info("Current Service ID: {}", serviceId);
         if (serviceType.equalsIgnoreCase("monolith")) {
-            serviceTypes = Collections.unmodifiableList(Arrays.asList(ServiceType.values()));
+            serviceTypes = List.of(ServiceType.values());
         } else {
             serviceTypes = Collections.singletonList(ServiceType.of(serviceType));
         }
-        ServiceInfo.Builder builder = ServiceInfo.newBuilder()
-                .setServiceId(serviceId)
-                .addAllServiceTypes(serviceTypes.stream().map(ServiceType::name).collect(Collectors.toList()));
-        UUID tenantId;
-        if (!StringUtils.isEmpty(tenantIdStr)) {
-            tenantId = UUID.fromString(tenantIdStr);
-            isolatedTenant = new TenantId(tenantId);
-        } else {
-            tenantId = TenantId.NULL_UUID;
-        }
-        builder.setTenantIdMSB(tenantId.getMostSignificantBits());
-        builder.setTenantIdLSB(tenantId.getLeastSignificantBits());
-
-        if (serviceTypes.contains(ServiceType.TB_RULE_ENGINE) && ruleEngineSettings != null) {
-            for (TbRuleEngineQueueConfiguration queue : ruleEngineSettings.getQueues()) {
-                TransportProtos.QueueInfo queueInfo = TransportProtos.QueueInfo.newBuilder()
-                        .setName(queue.getName())
-                        .setTopic(queue.getTopic())
-                        .setPartitions(queue.getPartitions()).build();
-                builder.addRuleEngineQueues(queueInfo);
-            }
+        if (!serviceTypes.contains(ServiceType.TB_RULE_ENGINE) || assignedTenantProfiles == null) {
+            assignedTenantProfiles = Collections.emptySet();
         }
 
-        serviceInfo = builder.build();
+        generateNewServiceInfoWithCurrentSystemInfo();
+    }
+
+    @AfterContextReady
+    public void setTransports() {
+        serviceInfo = ServiceInfo.newBuilder(serviceInfo)
+                .addAllTransports(getTransportServices().stream()
+                        .map(TbTransportService::getName)
+                        .collect(Collectors.toSet()))
+                .build();
+    }
+
+    private Collection<TbTransportService> getTransportServices() {
+        return applicationContext.getBeansOfType(TbTransportService.class).values();
     }
 
     @Override
@@ -113,7 +115,29 @@ public class DefaultTbServiceInfoProvider implements TbServiceInfoProvider {
     }
 
     @Override
-    public Optional<TenantId> getIsolatedTenant() {
-        return Optional.ofNullable(isolatedTenant);
+    public ServiceInfo generateNewServiceInfoWithCurrentSystemInfo() {
+        ServiceInfo.Builder builder = ServiceInfo.newBuilder()
+                .setServiceId(serviceId)
+                .addAllServiceTypes(serviceTypes.stream().map(ServiceType::name).collect(Collectors.toList()))
+                .setSystemInfo(getCurrentSystemInfoProto());
+        if (CollectionsUtil.isNotEmpty(assignedTenantProfiles)) {
+            builder.addAllAssignedTenantProfiles(assignedTenantProfiles.stream().map(UUID::toString).collect(Collectors.toList()));
+        }
+        return serviceInfo = builder.build();
     }
+
+    private TransportProtos.SystemInfoProto getCurrentSystemInfoProto() {
+        TransportProtos.SystemInfoProto.Builder builder = TransportProtos.SystemInfoProto.newBuilder();
+
+        getCpuUsage().ifPresent(builder::setCpuUsage);
+        getMemoryUsage().ifPresent(builder::setMemoryUsage);
+        getDiscSpaceUsage().ifPresent(builder::setDiskUsage);
+
+        getCpuCount().ifPresent(builder::setCpuCount);
+        getTotalMemory().ifPresent(builder::setTotalMemory);
+        getTotalDiscSpace().ifPresent(builder::setTotalDiscSpace);
+
+        return builder.build();
+    }
+
 }
